Fix a crash when copying a layer with selection masks

The is no need to call moveToThread in KisSelectionMask's ctor
because every node is moved in the ctor of KisNode

BUG:458324